force-app/main/default/objects/Map_Finder_Adv_Filter_Options__mdt/Map_Finder_Adv_Filter_Options__mdt.object-meta.xml
<CustomObject>
    <label>Map Finder Adv Filter Options</label>
    <pluralLabel>Map Finder Adv Filter Options</pluralLabel>
</CustomObject>