force-app/main/default/objects/Map_Finder_Adv_Filter_Options__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>