force-app/main/default/objects/Map_Finder_Adv_Filter_Options__mdt/fields/Map_Finder_Advance_Filter__c.field-meta.xml
<CustomField>
    <fullName>Map_Finder_Advance_Filter__c</fullName>
    <label>Map Finder Advance Filter</label>
    <referenceTo>Map_Finder_Advance_Filter__mdt</referenceTo>
    <relationshipLabel>Map Finder Adv Filter Options</relationshipLabel>
    <relationshipName>Map_Finder_Adv_Filter_Options</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>